src/scss/base/_global.scss
html {
    // positioning
    position: relative;
    height: 100%;

    // typography
    color: $dark;
    font-family: 'Montserrat', 'Roboto', Arial, Helvetica, sans-serif;
    font-size: 12px;

    // visual
    overflow-x: hidden;
    -webkit-overflow-scrolling:touch;
}

// Box sizing fix
body {
    // box model
    box-sizing: border-box;
}

*,
*::before,
*::after {
    // box model
    box-sizing: inherit;
}

